fixed image overlap on contact us page

--- a/src/components/ContactUs.module.css
+++ b/src/components/ContactUs.module.css
@@ -61,6 +61,7 @@
   flex-wrap: wrap;
   padding-top: 100px;
   gap: 80px;
+  z-index: 10;
 }
 
 @media screen and (max-width: 480px) {
